--- a/css/style.css
+++ b/css/style.css
@@ -6,16 +6,29 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
-.container-user {
+#container-user {
     background-color: #000;
+    width: 100%;
     height: calc(100vh - 80px);
     padding: 50px 50px 30px 50px;
 }
-.box-user {
-    background-color: blueviolet;
+#box-user {
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-content: flex-start;
+    gap: 10px;
+    flex-wrap: wrap;
+    overflow-y: scroll;    
 }
+.user {
+    width: calc((100% - 70px)  / 7);
+}
+.user img {
+    width: 100%;
+}
+
 /* barra controlli */
 #buttons {
     width: 100%;
