--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* regole generali */
 * {
     margin: 0;
     padding: 0;
@@ -6,6 +7,16 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
+a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 14px;
+}
+a i {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+/* main */
 #container-user {
     background-color: #000;
     width: 100%;
@@ -38,18 +49,44 @@ body {
     justify-content: space-between;
     align-items: center;
 }
-#colsx, #colcx, #coldx {
-    background-color: red;
-    border: 2px solid blue;
-    display: flex;    
-}
-#colsx a {
-    display: inline-block;
-    text-align: center;
-    margin-right: 10px;
-}
 .controls {
     display: flex;
     align-items: center;
-    margin-right:20px;
+}
+#colsx, #colcx .controls {
+    margin-right: 20px;
+}
+#colsx, #colcx, #coldx {
+    display: flex;    
+}
+#colsx, #colcx, #coldx a {
+    text-align: center;
+}
+/* barra sinistra */
+#colsx {
+    padding-left: 10px;
+}
+#colsx .controls {
+    margin-right: 20px;
+}
+#colsx a {
+    display: inline-block;
+    margin-right: 10px;
+}
+/* barra centrale */
+.controls.share a{
+    margin-right: 10px;
+}
+.controls.share a i {
+    color: green;
+}
+.controls.share div i {
+    color: #fff;
+}
+/* barra destra */
+#coldx a {
+    color: red;
+    padding: 0 20px;
+    line-height: 80px;
+    background-color: rgba(255, 255, 255, 0.3);
 }
