--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,16 @@ a i {
     margin-bottom: 10px;
 }
 /* main */
+.container {
+    position: relative;
+}
+#controls-up {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+
 #container-user {
     background-color: #000;
     width: 100%;
