--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,20 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
-a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 14px;
+#controls-up {
+    line-height: 30px;
+
 }
-a i {
-    font-size: 20px;
-    margin-bottom: 10px;
+a {
+    background-color: #444;
+    border-radius: 5px;
+    padding: 0 10px;
+    text-decoration: none;
+    margin-left: 5px;
+    color: #fff;
+    display: inline-block;
+    height: 30px;
+    vertical-align: middle;
 }
 /* main */
 .container {
@@ -22,8 +28,8 @@ a i {
 }
 #controls-up {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 5px;
+    right: 10px;
 }
 
 
@@ -37,14 +43,14 @@ a i {
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-content: flex-start;
     gap: 10px;
     flex-wrap: wrap;
     overflow-y: scroll;    
 }
 .user {
-    width: calc((100% - 70px)  / 7);
+    width: 250px;
 }
 .user img {
     width: 100%;
